tests/baselines/reference/iterableArrayPattern9.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern9.ts(1,14): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern9.ts (1 errors) ====
    function fun([a, b] = new FooIterator) { }
                 ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }